admin/assets/css/accordion-slider-admin.css
/* ... */
.layers-editor .as-layer {
	position: absolute;
	margin: 0;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-webkit-font-smoothing: subpixel-antialiased;
}

.layers-editor .as-layer.as-black {
	color: #FFF;
	background: rgb(0, 0, 0);
	background: rgba(0, 0, 0, 0.7);
}

.layers-editor .as-layer.as-white {
	color: #000;
	background: rgb(255, 255, 255);
	background: rgba(255, 255, 255, 0.7);
}

.layers-editor .as-layer.as-rounded {
	border-radius: 10px;
}

.layers-editor .as-layer.as-padding {
	padding: 10px;
}

.layers-editor .controls {
	padding: 10px;
	overflow: hidden;
}

.layers-editor .controls .left {
	float: left;
}

.layers-editor .controls .right {
	margin: 4px 0 0 150px;
	position: relative;
}

.layers-editor .buttons {
	padding: 0 10px 10px;
}

.layers-editor .layers-list {
	width: 130px;
	height: 121px;
	overflow: auto;
	margin: 0;
}

.layers-editor .layers-list-item {
	position: relative;
	background-color: #EEE;
	padding: 4px 5px;
	margin: 5px 0;
	cursor: move;
}

.layers-editor .selected-layers-list-item {
	border: 1px solid #999;
}

.layers-editor .layers-list-item:first-child {
	margin-top: 0;
}

.layers-editor .layers-list-item:last-child {
	margin-bottom: 0;
}

.layers-editor .layers-list-item input {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100% !important;
	height: 100%;
	margin: 0;
}

.layers-list-item-placeholder {
	border: 1px dashed #999;
	background-color: #FEFEFE;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}

.layers-editor .field {
	margin: 0 18px 0 8px;
}

.layers-editor input[type="text"] {
	width: 70px;
}

.layers-editor .layer-settings {
    display: none;
}

.layers-editor .selected-layer-settings {
    display: block;
}

.layers-editor .layer-settings > ul > li {
    float: left;
}

.layers-editor .tab {
    display: none;
}

.layers-editor .tab-label {
    font-size: 14px;
    margin-right: 20px;
    color: #0074a2;
}

.layers-editor .tab:checked ~ .tab-label,
.layers-editor .tab-label:hover {
    text-decoration: underline;
}

.layers-editor .setting-fields {
    display: none;
    position: absolute;
    top: 33px;
    left: 0;
}

.layers-editor .tab:checked ~ .setting-fields {
    display: block;
}

.layers-editor .tab:checked ~ .setting-fields {
    display: block;
}

.layers-editor .content {
	width: 790px;
	height: 80px;
	margin: 0;
}

.layers-editor .viewport-image {
	position: absolute;
}

.layers-editor .viewport-layers {
	position: absolute;
}

.layers-editor .viewport-layer {
	cursor: move;
}

.settings-editor {
	width: 330px;
	height: 120px;
	position: fixed;
	padding: 30px;
	margin: auto;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: #FFF;
	z-index: 1001;
}

.settings-editor.posts {
	height: 425px;
}

.settings-editor.gallery {
	height: 260px;
}

.settings-editor.flickr {
	height: 268px;
}

.settings-editor .heading {
	margin: 0 0 10px 0;
	font-size: 20px;
	font-weight: normal;
	line-height: 1;
	padding-bottom: 15px;
	border-bottom: 1px solid #DDD;
}

.settings-editor table {
	border: none;
	border-spacing: 0;
	width: 100%;
}

.settings-editor th,
.settings-editor td {
	padding-bottom: 10px;
}

.settings-editor th {
	font-size: 14px;
}

.settings-editor th.label-cell {
	text-align: left;
}

.settings-editor .setting-cell {
	text-align: right;
}

.settings-editor select,
.settings-editor input[type=text] {
	width: 215px;
	margin: 0;
}

.settings-editor input[type=checkbox] {
	margin-right: 199px;
}

.settings-editor .buttons {
	margin-top: 10px;
}

.settings-editor .multi-check {
    margin-left: 14px;
}

.breakpoints-box .inside {
	margin: 0;
	padding: 0;
}

.breakpoints-box .add-breakpoint {
	display: block;
	margin: 10px;
	text-align: center;
}

.breakpoint {
	background-color: #FFF;
}

.breakpoint-header {
	width: 100%;
	padding: 5px 10px;
	background-color: #F7F7F7;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	cursor: move;
}

.add-setting-group {
	padding: 10px 10px 30px;
}

.breakpoints-box table {
	margin-left: 5px;
}

.remove-breakpoint,
.remove-breakpoint-setting {
	display: none;
	position: absolute;
	right: 10px;
	font-size: 15px;
	margin-top: 3px;
	cursor: pointer;
}

.breakpoint-header:hover .remove-breakpoint,
.breakpoint-settings tr:hover .remove-breakpoint-setting {
	display: inline;
}

.remove-breakpoint:before,
.remove-breakpoint-setting:before {
	content: '×';
}

.breakpoint-settings td {
	white-space: nowrap;
}

.breakpoint-settings .setting-cell {
	width: 99%
}

.delete-accordion-dialog,
.delete-panel-dialog {
	position: fixed;
	height: 90px;
	background-color: #FFF;
	padding: 10px 20px;
	z-index: 1001;
	margin: auto;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
}

.delete-accordion-dialog {
	width: 330px;
}

.delete-panel-dialog {
	width: 300px;
}

.dialog-question {
	font-weight: bold;
	font-size: 14px;
}

.dialog-buttons {
	text-align: right;
}

.multi-check {
	position: relative;
    text-align: left;
}

.multi-check-header {
	width: 100%;
	padding: 5px;
	text-align: left;
	cursor: pointer;
	white-space: nowrap;
}

.multi-check-header-arrow {
	float: right;
	color: #333;
	font-size: 11px;
	margin-top: 2px;
}

.multi-check-content {
	overflow: auto;
	position: absolute;
	width: 100%;
	min-height: 50px;
	max-height: 150px;
	margin: 0;
	padding: 0 5px;
	border: 1px solid #999;
	background-color: #FFF;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	z-index: 1000;
}

.multi-check input {
	margin: 0 !important;
}

.multi-check label {
	margin-left: 5px;
}

.multi-check .group-label {
	text-align: center;
	padding: 5px 0;
	border-bottom: 1px solid #DDD;
}

.multi-check .single-check-container {
	padding: 5px;
}

